--- a/src/app/shared/index/indexView.html
+++ b/src/app/shared/index/indexView.html
@@ -1,4 +1,6 @@
 <form name="setup_form" ng-submit="indexView.go(setup_form.$valid)">
-    Channel <select ng-model="indexView.channel" ng-options="c for c in indexView.channels" required></select> <br>
+    Channel <select ng-model="indexView.channel"  ng-options="c for c in indexView.channels" required></select> <br>
+    <div = class ="Gobutton">
     <input type="submit" value="Go" ng-disabled="steup_form.$invalid"></input>
+    </div>
 </form>
